@@ -48,7 +48,6 @@ and open the template in the editor.
 .text-area .content {
     -fx-background-color: text-area-background ;
 }
-/*
 
 .titled-pane-heading .title, .titled-pane-heading > .title {
     -fx-background-color: linear-gradient(to bottom, derive(#cd853f,100%), derive(#cd853f,0%) 5%, derive(#cd853f,-25%) 95%, derive(#cd853f,50%) 100%);
@@ -56,29 +55,6 @@ and open the template in the editor.
     -fx-padding: 3;
 }
 
-.titled-pane > .title {
-    -fx-base: #333333;
-}
-.titled-pane-selected > .title {
-    -fx-background-color: linear-gradient(to bottom, derive(#5E9656,100%), derive(#5E9656,0%) 5%, derive(#5E9656,-25%) 95%, derive(#5E9656,50%) 100%);
-}
-
-.titled-pane-matched > .title {
-    -fx-background-color: linear-gradient(to bottom, derive(#5E96EE,100%), derive(#5E96EE,0%) 5%, derive(#5E96EE,-25%) 95%, derive(#5E96EE,50%) 100%);
-}
-
-.titled-pane-heading > .title {
-    -fx-background-insets: 0, 1, 2;
-    -fx-background-radius: 5 5 0 0, 4 4 0 0, 3 3 0 0;
-    -fx-padding: 0.166667em 0.833333em 0.25em 0.833333em; 
-}
-*/
-
-.titled-pane-heading .title, .titled-pane-heading > .title {
-    -fx-background-color: linear-gradient(to bottom, derive(#cd853f,100%), derive(#cd853f,0%) 5%, derive(#cd853f,-25%) 95%, derive(#cd853f,50%) 100%);
-    -fx-text-fill: white;
-    -fx-padding: 3;
-}
 .titled-pane-heading > .title {
     -fx-background-insets: 0, 1, 2;
     -fx-background-radius: 5 5 0 0, 4 4 0 0, 3 3 0 0;
